<resources>
    <string name="app_name">Дельта(Судовождение)</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="all_question">
      С комментариями
    </string>
    <string name="nav_serch_name">Поиск</string>
    <string name="nav_nav_captain">Капитаны</string>
    <string name="nav_senior_assistant">Старшие помощники капитана</string>
    <string name="nav_watch_mate_assistant">Вахтенные помощники капитана </string>
    <string name="mailto">Обратная связь</string>
    <string name="number_search">№</string>
    <string name="drawer_down_text">Дельта Тест: Вопросы и ответы</string>
    <string name="drawer_up_text">Судовождение</string>
    <string name="subject_mail">Дельта Тест. Судовождение</string>
    <string name="email_mail">updeveloper3y@gmail.com</string>
    <string name="nav_nav_captain2">Капитаны</string>
    <string name="nav_senior_assistant2">Старшие помощники капитана</string>
    <string name="nav_watch_mate_assistant2">Вахтенные помощники капитана</string>
    <string name="all_questions">Все вопросы</string>
    <string name="all_question_with_comment">C комментариями</string>
</resources>
